@@ -1,3 +1,7 @@
+Jan 09, 2015 - chris ---------------------------------------------------
+o issue #45: fixed segfault in Journal recovery (thanks, Michael
+	Moellney)
+
 Jan 02, 2015 - chris ---------------------------------------------------
 o issue #44: approx. matching returned the wrong key (thanks, Joel
 	Jacobson)
